[gd_scene load_steps=3 format=3 uid="uid://co10huwfvo8tx"]

[ext_resource type="Script" uid="uid://codsj7bdn3y47" path="res://autoload/screen/dynamic_screen_pointer.gd" id="1_3lj1f"]
[ext_resource type="Script" uid="uid://2eroxwwy2cwv" path="res://autoload/screen/dynamic_screen_pointer_canvas_layer.gd" id="1_ixmrb"]

[node name="DynamicScreenPointerCanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource("1_ixmrb")

[node name="DynamicScreenPointerControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="DynamicScreenPointerControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DynamicScreenPointer" type="Control" parent="DynamicScreenPointerControl/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("1_3lj1f")

[node name="TopReticle" type="Line2D" parent="DynamicScreenPointerControl/CenterContainer/DynamicScreenPointer"]
unique_name_in_owner = true
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="BottomReticle" type="Line2D" parent="DynamicScreenPointerControl/CenterContainer/DynamicScreenPointer"]
unique_name_in_owner = true
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="RightReticle" type="Line2D" parent="DynamicScreenPointerControl/CenterContainer/DynamicScreenPointer"]
unique_name_in_owner = true
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="LeftReticle" type="Line2D" parent="DynamicScreenPointerControl/CenterContainer/DynamicScreenPointer"]
unique_name_in_owner = true
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0
